--- a/Decorator.IO/Decorator.IO.csproj
+++ b/Decorator.IO/Decorator.IO.csproj
@@ -7,8 +7,7 @@
 
   <ItemGroup>
     <PackageReference Include="Humanizer.Core" Version="2.5.16" />
-    <PackageReference Include="Newtonsoft.Json" Version="12.0.1" />
-    <PackageReference Include="SwissILKnife" Version="0.0.6-pre" />
+    <PackageReference Include="Utf8Json" Version="1.3.7" />
   </ItemGroup>
 
   <ItemGroup>
