Parse custom language using Antlr

--- a/Decorator.IO/Decorator.IO.csproj
+++ b/Decorator.IO/Decorator.IO.csproj
@@ -12,8 +12,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <None Update="messages.json">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    <None Update="dio.g4">
+      <Generator>MSBuild:Compile</Generator>
     </None>
   </ItemGroup>
 
