--- a/Decorator.IO/Decorator.IO.csproj
+++ b/Decorator.IO/Decorator.IO.csproj
@@ -12,6 +12,11 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Decorator.IO.Core\Decorator.IO.Core.csproj" />
+    <ProjectReference Include="..\Decorator.IO.Parser\Decorator.IO.Parser.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
     <None Update="dio.g4">
       <Generator>MSBuild:Compile</Generator>
     </None>
