--- a/Decorator.IO.Providers.CSharp/Decorator.IO.Providers.CSharp.csproj
+++ b/Decorator.IO.Providers.CSharp/Decorator.IO.Providers.CSharp.csproj
@@ -5,6 +5,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Humanizer.Core" Version="2.5.16" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\Decorator.IO.Core\Decorator.IO.Core.csproj" />
   </ItemGroup>
 
