create base of new provider

--- a/Decorator.IO.Providers.CSharp/Decorator.IO.Providers.CSharp.csproj
+++ b/Decorator.IO.Providers.CSharp/Decorator.IO.Providers.CSharp.csproj
@@ -19,6 +19,11 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Decorator.IO.Core\Decorator.IO.Core.csproj" />
+    <ProjectReference Include="..\Decorator.IO.Providers.Core\Decorator.IO.Providers.Core.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Processes\" />
   </ItemGroup>
 
 </Project>
