--- a/Decorator.IO.Providers.CSharp/Decorator.IO.Providers.CSharp.csproj
+++ b/Decorator.IO.Providers.CSharp/Decorator.IO.Providers.CSharp.csproj
@@ -15,6 +15,11 @@
 
   <ItemGroup>
     <PackageReference Include="Humanizer.Core" Version="2.5.16" />
+    <PackageReference Include="Microsoft.CodeAnalysis.Common" Version="2.10.0" />
+    <PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="2.10.0" />
+    <PackageReference Include="Microsoft.CodeAnalysis.CSharp.Workspaces" Version="2.10.0" />
+    <PackageReference Include="Microsoft.CodeAnalysis.Scripting" Version="2.10.0" />
+    <PackageReference Include="Microsoft.CodeAnalysis.Scripting.Common" Version="2.10.0" />
   </ItemGroup>
 
   <ItemGroup>
