--- a/Decorator.IO/Decorator.IO.csproj
+++ b/Decorator.IO/Decorator.IO.csproj
@@ -1,15 +1,10 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp2.2</TargetFramework>
     <LangVersion>7.1</LangVersion>
   </PropertyGroup>
-
-  <ItemGroup>
-    <PackageReference Include="Humanizer.Core" Version="2.5.16" />
-    <PackageReference Include="Utf8Json" Version="1.3.7" />
-  </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\Decorator.IO.Core\Decorator.IO.Core.csproj" />
