--- a/Decorator.IO.Parser/Decorator.IO.Parser.csproj
+++ b/Decorator.IO.Parser/Decorator.IO.Parser.csproj
@@ -6,6 +6,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Sprache" Version="2.2.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\Decorator.IO.Core\Decorator.IO.Core.csproj" />
   </ItemGroup>
 
