--- a/Decorator.IO.Tests/Decorator.IO.Tests.csproj
+++ b/Decorator.IO.Tests/Decorator.IO.Tests.csproj
@@ -5,7 +5,7 @@
 
     <IsPackable>false</IsPackable>
 
-    <LangVersion>7.1</LangVersion>
+    <LangVersion>preview</LangVersion>
   </PropertyGroup>
 
   <ItemGroup>
